--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,68 @@
-<footer class="site-footer">
+<div id="footer">
+	<div class="container">
+		<div class="row">
+			<section class="3u 6u(narrower) 12u$(mobilep)">
+				<h3>Links to Stuff</h3>
+				<ul class="links">
+					<li><a href="#">Mattis et quis rutrum</a></li>
+					<li><a href="#">Suspendisse amet varius</a></li>
+					<li><a href="#">Sed et dapibus quis</a></li>
+					<li><a href="#">Rutrum accumsan dolor</a></li>
+					<li><a href="#">Mattis rutrum accumsan</a></li>
+					<li><a href="#">Suspendisse varius nibh</a></li>
+					<li><a href="#">Sed et dapibus mattis</a></li>
+				</ul>
+			</section>
+			<section class="3u 6u$(narrower) 12u$(mobilep)">
+				<h3>More Links to Stuff</h3>
+				<ul class="links">
+					<li><a href="#">Duis neque nisi dapibus</a></li>
+          <li><a href="#">Sed et dapibus quis</a></li>
+					<li><a href="#">Rutrum accumsan sed</a></li>
+					<li><a href="#">Mattis et sed accumsan</a></li>
+					<li><a href="#">Duis neque nisi sed</a></li>
+					<li><a href="#">Sed et dapibus quis</a></li>
+					<li><a href="#">Rutrum amet varius</a></li>
+				</ul>
+			</section>
+			<section class="6u 12u(narrower)">
+				<h3>Get In Touch</h3>
+				<form>
+					<div class="row 50%">
+						<div class="6u 12u(mobilep)">
+							<input type="text" name="name" id="name" placeholder="Name" />
+						</div>
+						<div class="6u 12u(mobilep)">
+							<input type="email" name="email" id="email" placeholder="Email" />
+						</div>
+					</div>
+					<div class="row 50%">
+						<div class="12u">
+							<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
+						</div>
+					</div>
+					<div class="row 50%">
+						<div class="12u">
+							<ul class="actions">
+								<li><input type="submit" class="button alt" value="Send Message" /></li>
+							</ul>
+						</div>
+					</div>
+				</form>
+			</section>
+		</div>
+	</div>
 
-  <div class="wrapper">
+	<!-- Icons -->
+		<ul class="icons">
+			<li><a href="https://github.com/{{ site.github_username }}" class="icon fa-github"><span class="label">GitHub</span></a></li>
+		</ul>
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+	<!-- Copyright -->
+		<div class="copyright">
+			<ul class="menu">
+				<li>{{ site.org_name }}</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
-    </div>
-
-  </div>
-
-</footer>
+</div>
