--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,17 +4,27 @@
   {% include head.html %}
 
   <body>
+    <div id="page-wrapper">
+      {% include header.html %}
 
-    {% include header.html %}
+      <section class="wrapper style1">
+				<div class="container">
+					<div class="row 200%">
+            {{ content }}
+          </div>
+        </div>
+      </section>
 
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+      {% include footer.html %}
     </div>
 
-    {% include footer.html %}
-
+    <!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
   </body>
 
 </html>
