--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
 layout: default
 ---
-<article class="post">
+{% include sidebar.html %}
+<div class="8u  12u(narrower) important(narrower)">
+	<div id="content">
+    <article>
+    	<header>
+    		<h2>{{ page.title }}</h2>
+    	</header>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+      {{ content }}
 
-  <div class="post-content">
-    {{ content }}
+    </article>
   </div>
-
-</article>
+</div>
