Added blog template. Home page styling

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,18 @@
 ---
 layout: default
 ---
-{% include sidebar.html %}
+{% include blog_sidebar.html %}
 <div class="8u  12u(narrower) important(narrower)">
 	<div id="content">
     <article>
     	<header>
-    		<h2>{{ page.title }}</h2>
-        <p><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+        <p>
+          {% if page.author %}
+          <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+            <span itemprop="name">{{ site.data.members[page.author].name }}</span></span>{% endif %}
+             •
+            <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
+        </p>
     	</header>
 
       {{ content }}
