--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,35 +1,26 @@
 <div id="header">
 
 	<!-- Logo -->
-		<h1><a href="index.html" id="logo">{{ site.title }}</a></h1>
+		<h1><a href="/{{ site.baseurl }}" id="logo">{{ site.title }}</a></h1>
 
 	<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li class="current"><a href="index.html">Home</a></li>
+				<li class="{% unless page.navselect %}current{% endunless %}"><a href="/{{ site.baseurl }}">Home</a></li>
 				<li>
-					<a href="#">Dropdown</a>
+					<a href="#">Projects</a>
 					<ul>
-						<li><a href="#">Lorem dolor</a></li>
-						<li><a href="#">Magna phasellus</a></li>
-						<li><a href="#">Etiam sed tempus</a></li>
+						<li><a href="#">Battle Bots</a></li>
 						<li>
-							<a href="#">Submenu</a>
+							<a href="#">Arduino Stuff</a>
 							<ul>
-								<li><a href="#">Lorem dolor</a></li>
-								<li><a href="#">Phasellus magna</a></li>
-								<li><a href="#">Magna phasellus</a></li>
-								<li><a href="#">Etiam nisl</a></li>
-								<li><a href="#">Veroeros feugiat</a></li>
+								<li><a href="#">Code</a></li>
+								<li><a href="#">Schematics</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Veroeros feugiat</a></li>
 					</ul>
 				</li>
-				<li><a href="left-sidebar.html">Left Sidebar</a></li>
-				<li><a href="right-sidebar.html">Right Sidebar</a></li>
-				<li><a href="two-sidebar.html">Two Sidebar</a></li>
-				<li><a href="no-sidebar.html">No Sidebar</a></li>
+				<li class="{% if page.navselect == 'blog' %}current{% endif %}"><a href="{{ site.baseurl }}/blog">Blog</a></li>
 			</ul>
 		</nav>
 
